TestSuite/errors/err0545.pas
procedure ppp(ob: object);
begin
  
end;

begin
  //var obj: object := Shuffle;
  ppp(Shuffle);
end.